changes to pom, added working module-info, can now open App directly from App.java