@@ -8,8 +8,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>time-master</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url></url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -55,8 +54,17 @@
               <argLine>
               --add-opens timeMaster=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
               </argLine>
+              <argLine>--enable-preview</argLine>
           </configuration>
         </plugin>
+        <plugin>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>3.0.0-M5</version>
+          <configuration>
+            <argLine>--enable-preview</argLine>
+          </configuration>
+        </plugin>
+    
         <plugin>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-maven-plugin</artifactId>
@@ -64,7 +72,7 @@
           <!-- Default configuration for running -->
           <!-- Usage: mvn javafx:run -->
             <configuration>
-                <mainClass>timeMaster.App</mainClass>
+                <mainClass>timeMaster/timeMaster.App</mainClass>
             </configuration>
       </plugin>
       </plugins>
